GpMessages/8688299088300
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Monday, July 31, 2023 4:46:09 PM</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    61647 / (61647.sum()) * 100
                   ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Monday, July 31, 2023 4:46:09 PM (Elapsed Time: 0.12 seconds)</msg></messages>